As a user I want to add events So others can see them. [Delivers #183639054]
